﻿IMPROVEMENTS / FIXES
- UI:
	- Fix numeric input fields not updating when they should.
	- New Team Icons toolbar icon for easier identification.
- AI:
	- Add a toggle to the pilot AI to disable ramming ground targets.
	- Add a toggle to the pilot AI for treating the min altitude as a hard limit.
	- Include the TWR of a vessel when determining the gain altitude slope, allowing much higher slopes.
	- Include a climb rate at half the take-off climb rate while evading below min altitude.
	- Prevent inverted loops when below min altitude and improve the inverted loop threshold calculation.
	- Improve vessel collision avoidance by prioritising non-debris and by prioritising potential collisions by size.
- Armor:
	- Allow changing the unclamped min/max dimensions for proc armor in the settings.cfg (PROC_ARMOR_ALT_LIMITS).
- Weapons:
	- Missiles:
		- Allow missiles to be fired from their full Dynamic launch range isntead of static launch range.
		- Fix missiles with a reload module launching incorrectly.
		- Add trigger range setting for cluster missile submunition launch.
		- Fix MultiMissilelaunchers resetting detonation Distance.
		- Fix MML "TNT Mass Equivalent = -0.0018726" PAW label.
		- Fixed Missiles with ModuleMissileRearm improperly launching.
		- Fixed MMLs resetting detonation distance.
		- Missile/bomb fratricide prevention now also checks the source vessel name to allow explosives to be destroyed by explosives of the same type from another vessel.
- Competition:
	- Adjust round progress strings in tournaments: ranked => 0→N, shuffled => 1→N.
	- Report total number of rounds for ranked tournaments properly.

v1.6.4.1
IMPROVEMENTS / FIXES
- UI:
	- Add an option for disabling the self-updating of the text in numeric input fields.
		- When the value fails to parse (after the delay) the text will turn red.
		- Toggling the numeric fields or closing the windows will reset the field to the most recently successfully parsed value.