@@ -4,6 +4,7 @@ using System.Collections;
 using System.Collections.Generic;
 using System.IO;
 using System.Linq;
+using System.Text;
 using KSP.UI.Screens;
 
 using BDArmory.Extensions;
@@ -1192,7 +1193,7 @@ namespace BDArmory.VesselSpawning
                             else { selectedVesselURL = vesselURL; }
                             selectionTimer = Time.realtimeSinceStartup;
                         }
-                        GUILayout.Label($"{StringUtils.Localize("#LOC_BDArmory_CraftBrowser_Parts")}: {vesselInfo.partCount},  {StringUtils.Localize("#LOC_BDArmory_CraftBrowser_Mass")}: {(vesselInfo.totalMass < 1000f ? $"{vesselInfo.totalMass:G3}t" : $"{vesselInfo.totalMass / 1000f:G3}kt")}\nCrew count: {(craftBrowser.crewCounts.ContainsKey(vesselURL) ? craftBrowser.crewCounts[vesselURL].ToString() : "unknown")}\n{(vesselInfo.UnavailableShipParts.Count > 0 ? $"<b><color=red>{StringUtils.Localize("#LOC_BDArmory_CraftBrowser_InvalidParts")}</color></b>" : $"{StringUtils.Localize("#LOC_BDArmory_CraftBrowser_Version")}: {(vesselInfo.compatibility == VersionCompareResult.COMPATIBLE ? $"{vesselInfo.version}" : $"<color=red>{vesselInfo.version}</color>")}{(vesselInfo.UnavailableShipPartModules.Count > 0 ? $"  <color=red>{StringUtils.Localize("#LOC_BDArmory_CraftBrowser_UnknownModules")}</color>" : "")}")}", CustomCraftBrowserDialog.InfoStyle);
+                        GUILayout.Label(VesselInfoEntry(vesselURL, vesselInfo, true), CustomCraftBrowserDialog.InfoStyle);
                         GUILayout.EndHorizontal();
                     }
             }
@@ -1233,6 +1234,31 @@ namespace BDArmory.VesselSpawning
             GUIUtils.RepositionWindow(ref BDArmorySetup.WindowRectVesselMoverVesselSelection);
             GUIUtils.UpdateGUIRect(BDArmorySetup.WindowRectVesselMoverVesselSelection, _vesselGUICheckIndex);
             GUIUtils.UseMouseEventInRect(BDArmorySetup.WindowRectVesselMoverVesselSelection);
+        }
+
+        readonly StringBuilder vesselInfoEntry = new();
+        public string VesselInfoEntry(string vesselURL, CraftProfileInfo vesselInfo, bool withCrewCount)
+        {
+            vesselInfoEntry.Clear();
+            vesselInfoEntry.AppendLine(
+                $"{StringUtils.Localize("#LOC_BDArmory_CraftBrowser_Parts")}: {(
+                    vesselInfo.partCount < 101 ? vesselInfo.partCount :
+                    vesselInfo.partCount < 201 ? $"<color=yellow>{vesselInfo.partCount}</color>" :
+                    vesselInfo.partCount < 301 ? $"<color=red>{vesselInfo.partCount}</color>" :
+                    $"<b><color=red>{vesselInfo.partCount}</color></b>"
+                )},  {StringUtils.Localize("#LOC_BDArmory_CraftBrowser_Mass")}: {(
+                    vesselInfo.totalMass < 1000f ? $"{vesselInfo.totalMass:G3}t" :
+                    $"{vesselInfo.totalMass / 1000f:G3}kt"
+                )}"
+            );
+            if (withCrewCount)
+                vesselInfoEntry.AppendLine($"Crew count: {(craftBrowser.crewCounts.ContainsKey(vesselURL) ? craftBrowser.crewCounts[vesselURL].ToString() : "unknown")}");
+            vesselInfoEntry.Append(
+                vesselInfo.UnavailableShipParts.Count > 0 ? $"<b><color=red>{StringUtils.Localize("#LOC_BDArmory_CraftBrowser_InvalidParts")}</color></b>" :
+                $"{StringUtils.Localize("#LOC_BDArmory_CraftBrowser_Version")}: {(vesselInfo.compatibility == VersionCompareResult.COMPATIBLE ? $"{vesselInfo.version}" :
+                $"<color=red>{vesselInfo.version}</color>")}{(vesselInfo.UnavailableShipPartModules.Count > 0 ? $"  <color=red>{StringUtils.Localize("#LOC_BDArmory_CraftBrowser_UnknownModules")}</color>" : "")}"
+            );
+            return vesselInfoEntry.ToString();
         }
 
         #endregion
@@ -1488,16 +1514,16 @@ namespace BDArmory.VesselSpawning
         static string currentFolder;
 
         string _currentFolder; // For checking if the current folder has changed between instances and thus the craftList needs refreshing.
-        public Dictionary<string, CraftProfileInfo> craftList = new Dictionary<string, CraftProfileInfo>();
-        public Dictionary<string, int> crewCounts = new Dictionary<string, int>();
-        public List<string> subfolders = new List<string>();
+        public Dictionary<string, CraftProfileInfo> craftList = new();
+        public Dictionary<string, int> crewCounts = new();
+        public List<string> subfolders = new();
         public Action<string> selectFileCallback = null;
         public Action cancelledCallback = null;
-        public static Dictionary<string, string> shipNames = new Dictionary<string, string>(); // craftURLs to ship names.
-        public static GUIStyle ButtonStyle = new GUIStyle(BDArmorySetup.ButtonStyle);
-        public static GUIStyle SelectedButtonStyle = new GUIStyle(BDArmorySetup.SelectedButtonStyle);
-        public static GUIStyle InfoStyle = new GUIStyle(BDArmorySetup.BDGuiSkin.label);
-        public static GUIStyle LabelStyle = new GUIStyle(BDArmorySetup.BDGuiSkin.label);
+        public static Dictionary<string, string> shipNames = new(); // craftURLs to ship names.
+        public static GUIStyle ButtonStyle = new(BDArmorySetup.ButtonStyle);
+        public static GUIStyle SelectedButtonStyle = new(BDArmorySetup.SelectedButtonStyle);
+        public static GUIStyle InfoStyle = new(BDArmorySetup.BDGuiSkin.label);
+        public static GUIStyle LabelStyle = new(BDArmorySetup.BDGuiSkin.label);
         public void UpdateList()
         {
             CheckCurrent();
